# WeaR-Synaptic

./: ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  build_output.txt  package-lock.json  package.json  scaffold_plan.json  tailwind.config.js  tsc_errors.txt  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  cargo_check.txt  cargo_check2.txt  cargo_output.txt  check_output.txt  check_phase5.txt  tauri.conf.json
src-tauri/capabilities/: default.json  synaptic-db.json
src-tauri/src/: commands.rs  config.rs  error.rs  inspector.rs  lib.rs  main.rs  process_manager.rs  registry.rs  state.rs
src-tauri/src/database/: migrations.rs  mod.rs
src/components/inspector/: InspectorPanel.tsx  VirtualizedLogViewer.tsx
src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
src/components/registry/: RegistryBrowser.tsx
src/components/servers/: ServerCard.tsx  ServerFormModal.tsx  ServerList.tsx
src/components/settings/: SettingsPanel.tsx
src/components/ui/: badge.tsx
src/lib/: tauri.ts  utils.ts
src/services/: ReplayEngine.ts  db.ts
src/stores/: appStore.ts
src/types/: index.ts
